<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="Botoon"
    android:background="@drawable/fondo3"

    tools:context=".Plantilla4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/textview7"
            android:textSize="26sp"
            android:textColor="@color/white"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="129dp"
            android:text="@string/textview8"
            android:textSize="20sp"
            android:textColor="@color/white"
            tools:ignore="TextSizeCheck" />

        <LinearLayout
            android:layout_width="316dp"
            android:layout_height="105dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="110dp"
                android:contentDescription="@string/todo1"
                app:srcCompat="@drawable/maxresdefault__1_" />
        </LinearLayout>

        <RadioGroup

            android:layout_width="match_parent"
            android:layout_height="170dp">

            <RadioButton
                android:id="@+id/RADI01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton4"
                android:textColor="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

            <RadioButton
                android:id="@+id/RADI02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton5"
                android:textColor="@color/white"
                tools:ignore="VisualLintButtonSize" />

            <RadioButton
                android:id="@+id/RADI03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton6"
                android:textColor="@color/white"
                tools:ignore="VisualLintButtonSize" />
        </RadioGroup>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Botoon"
            android:text="@string/button2"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>