<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo3"

    tools:context=".Plantilla3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:text="@string/textview5"
            android:textSize="26sp"
            android:textColor="@color/white"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:text="@string/textview6"
            android:textSize="20sp"
            android:textColor="@color/white"
            tools:ignore="TextSizeCheck" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="142dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/maxresdefault" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/RADI1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton"
                android:textColor="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

            <RadioButton
                android:id="@+id/RADI2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton2"
                android:textColor="@color/white"
                tools:ignore="VisualLintButtonSize" />

            <RadioButton
                android:id="@+id/REDI3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton3"
                android:textColor="@color/white"
                tools:ignore="VisualLintButtonSize" />
        </RadioGroup>

        <Button
            android:id="@+id/botoon1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="BOTON"
            android:text="@string/button3"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>